@@ -20,7 +20,6 @@ import java.io.IOException;
 import java.util.HashMap;
 import java.util.Map;
 import org.apache.solr.SolrTestCaseJ4;
-import org.apache.solr.cli.SimplePostTool;
 import org.apache.solr.common.cloud.ZkNodeProps;
 import org.apache.solr.common.util.JavaBinCodec;
 import org.apache.solr.common.util.Utils;
@@ -43,7 +42,7 @@ public class ZkNodePropsTest extends SolrTestCaseJ4 {
     ZkNodeProps props2 = ZkNodeProps.load(bytes);
 
     props.forEach((s, o) -> assertEquals(o, props2.get(s)));
-    SimplePostTool.BAOS baos = new SimplePostTool.BAOS();
+    Utils.BAOS baos = new Utils.BAOS();
     try (JavaBinCodec jbc = new JavaBinCodec()) {
       jbc.marshal(zkProps.getProperties(), baos);
     }
