@@ -32,7 +32,6 @@ import org.apache.http.client.methods.HttpGet;
 import org.apache.http.client.methods.HttpPost;
 import org.apache.http.entity.ByteArrayEntity;
 import org.apache.http.util.EntityUtils;
-import org.apache.solr.cli.SimplePostTool;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.impl.CloudLegacySolrClient;
@@ -44,6 +43,7 @@ import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.util.StrUtils;
+import org.apache.solr.common.util.Utils;
 import org.apache.solr.util.RTimer;
 import org.junit.Test;
 import org.noggit.JSONParser;
@@ -168,7 +168,7 @@ public class TestBlobHandler extends AbstractFullDistribZkTestBase {
 
     HttpGet httpGet = new HttpGet(url);
     HttpResponse entity = httpClient.execute(httpGet);
-    ByteBuffer b = SimplePostTool.inputStreamToByteArray(entity.getEntity().getContent());
+    ByteBuffer b = Utils.toByteArray(entity.getEntity().getContent());
     try {
       assertEquals(b.limit(), bytarr.length);
       for (int i = 0; i < bytarr.length; i++) {
